--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ecommerce Website</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./static/style.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet"
 />
 </head>
@@ -56,7 +56,7 @@
                     <div class="wrapper flexitem">
                         <a href="#" class="trigger desktop-hide"><span class="i ri-menu-2-line"></span></a>
                         <div class="left flexitem">
-                            <div class="logo"><a href="/"><span class="circle"></span>.Store</a></div>
+                            <div class="logo"><a href="/"><span class="circle"></span>DeviceZone</a></div>
                             <nav class="mobile-hide">
                                 <ul class="flexitem second-links">
                                     <li><a href="#">Home</a></li>
@@ -183,11 +183,53 @@
                 </div>
             </div>
 
-            <div class="header-main mobile hide">
+            <div class="header-main mobile-hide">
                 <div class="container">
-                    <div class="wrapper flex-item">
-                        <left></left>
-                        <right></right>
+                    <div class="wrapper flexitem">
+                        <div class="left">
+                            <div class="dpt-cat">
+                                <div class="dpt-head">
+                                    <div class="main-text">All Departments</div>
+                                    <div class="mini-text mobile-hide">Total 1059 Products</div>
+                                    <a href="" class="dpt-trigger mobile-hide"></a>
+                                </div>
+                            </div>
+                            <div class="dpt-menu">
+                                <ul class="second-links">
+                                    <li>
+                                        <a href="#">
+                                            <div class="icon-large"><i class="ri-xxx-line"></i></div>
+                                            Beauty
+                                            <div class="div icon-small"><i class="ri-arrow-s-line"></i></div>
+                                        </a>
+                                    </li>
+                                     <li>
+                                        <a href="#">
+                                            <div class="icon-large"><i class="ri-xxx-line"></i></div>
+                                            Beauty
+                                            <div class="div icon-small"><i class="ri-arrow-s-line"></i></div>
+                                        </a>
+                                    </li>
+                                     <li>
+                                        <a href="#">
+                                            <div class="icon-large"><i class="ri-xxx-line"></i></div>
+                                            Beauty
+                                            <div class="div icon-small"><i class="ri-arrow-s-line"></i></div>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="right">
+                            <div class="search-box">
+                                <form action="" class="search">
+                                    <span class="icon-large"><i class="ri-search-line">
+                                        <input type="search" name="" id="" placeholder="Search for products">
+                                        <button type="submit">Search</button>
+                                    </i></span>
+                                </form>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
