--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,7 @@
 <body>
     <div id="page" class="site">
         <header>
-            <div class="header-top">
+            <div class="header-top mobile-hide">
                 <div class="container">
                     <div class="wrapper flexitem">
                         <div class="left">
@@ -90,7 +90,7 @@
                                                             <h4>Jewelry</h4>
                                                             <ul>
                                                                 <li><a href="#">Accessories</a></li>
-                                                                <li><a href="#"></a>Bags & Purses</li>
+                                                                <li><a href="#">Bags & Purses</a></li>
                                                                 <li><a href="#">Necklaces</a></li>
                                                                 <li><a href="#">Rings</a></li>
                                                                 <li><a href="#">Earrings</a></li>
@@ -191,30 +191,135 @@
                                 <div class="dpt-head">
                                     <div class="main-text">All Departments</div>
                                     <div class="mini-text mobile-hide">Total 1059 Products</div>
-                                    <a href="" class="dpt-trigger mobile-hide"></a>
+                                    <a href="#" class="dpt-trigger mobile-hide">
+                                        <i class="ri-menu-3-line ri-xl"></i>
+                                    </a>
                                 </div>
                             </div>
                             <div class="dpt-menu">
                                 <ul class="second-links">
+                                    <li class="has-child beauty">
+                                        <a href="#">
+                                            <div class="icon-large"><i class="ri-bear-smile-line"></i></div>
+                                            Beauty
+                                            <div class="div icon-small"><i class="ri-arrow-right-s-line"></i></div>
+                                        </a>
+                                        <ul>
+                                            <li><a href="#">Makeup</a></li>
+                                            <li><a href="#">Skin Care</a></li>
+                                            <li><a href="#">Hair Care</a></li>
+                                            <li><a href="#">Fragrance</a></li>
+                                            <li><a href="#">Foot & Hand Care</a></li>
+                                            <li><a href="#">Tools & Accesories</a></li>
+                                            <li><a href="#">Shave & Hair removal</a></li>
+                                            <li><a href="#">Personal Care</a></li>
+                                        </ul>
+                                    </li>
+                                    <li class="has-child electronic">
+                                        <a href="#">
+                                            <div class="icon-large"><i class="ri-bluetooth-connect-line"></i></div>
+                                            Electronic
+                                            <div class="div icon-small"><i class="ri-arrow-right-s-line"></i></div>
+                                        </a>
+                                        <ul>
+                                            <li><a href="#">Camera</a></li>
+                                            <li><a href="#">Cell Phones</a></li>
+                                            <li><a href="#">Computers</a></li>
+                                            <li><a href="#">GPS & Navigation</a></li>
+                                            <li><a href="#">Headphones</a></li>
+                                            <li><a href="#">Home Audio</a></li>
+                                            <li><a href="#">Television</a></li>
+                                            <li><a href="#">Video Projectors</a></li>
+                                            <li><a href="#">Wearable Technology</a></li>
+                                        </ul>
+                                    </li>
+                                    <li class="has-child fashion">
+                                        <a href="#">
+                                            <div class="icon-large"><i class="ri-t-shirt-air-line"></i></div>
+                                            Women's Fashion
+                                            <div class="div icon-small"><i class="ri-arrow-right-s-line"></i></div>
+                                        </a>
+                                        <li><a href="#">Clothing</a></li>
+                                            <li><a href="#">Shoes</a></li>
+                                            <li><a href="#">Jewelry</a></li>
+                                            <li><a href="#">Watches</a></li>
+                                            <li><a href="#">Handbags</a></li>
+                                            <li><a href="#">Accesories</a></li>
+                                    </li>
                                     <li>
                                         <a href="#">
-                                            <div class="icon-large"><i class="ri-xxx-line"></i></div>
-                                            Beauty
-                                            <div class="div icon-small"><i class="ri-arrow-s-line"></i></div>
+                                            <div class="icon-large"><i class="ri-shirt-line"></i></div>
+                                            Men's Fashion
                                         </a>
                                     </li>
                                      <li>
                                         <a href="#">
-                                            <div class="icon-large"><i class="ri-xxx-line"></i></div>
-                                            Beauty
-                                            <div class="div icon-small"><i class="ri-arrow-s-line"></i></div>
+                                            <div class="icon-large"><i class="ri-user-5-line"></i></div>
+                                            Girl's Fashion
                                         </a>
                                     </li>
                                      <li>
                                         <a href="#">
-                                            <div class="icon-large"><i class="ri-xxx-line"></i></div>
-                                            Beauty
-                                            <div class="div icon-small"><i class="ri-arrow-s-line"></i></div>
+                                            <div class="icon-large"><i class="ri-user-6-line"></i></div>
+                                            Boy's Fashion
+                                        </a>
+                                    </li>
+                                     <li>
+                                        <a href="#">
+                                            <div class="icon-large"><i class="ri-heart-pulse-line"></i></div>
+                                            Health & Household
+                                        </a>
+                                    </li>
+                                    <li class="has-child homekit">
+                                        <a href="#">
+                                            <div class="icon-large"><i class="ri-home-8-line"></i></div>
+                                            Home & Kitchen
+                                            <div class="div icon-small"><i class="ri-arrow-right-s-line"></i></div>
+                                        </a>
+                                        <div class="mega">
+                                            <div class="flexcol">
+                                                <div class="row">
+                                                    <h4><a href="#">Kitchen & Dining</a></h4>
+                                                    <ul>
+                                                        <li><a href="#">Kitchen</a></li>
+                                                        <li><a href="#">Dining Room</a></li>
+                                                        <li><a href="#">Pantry</a></li>
+                                                        <li><a href="#">Great Room</a></li>
+                                                        <li><a href="#">Breakfast Nook</a></li>
+                                                    </ul>
+                                                </div>
+                                                <div class="row">
+                                                    <h4><a href="#">Living</a></h4>
+                                                    <ul>
+                                                        <li><a href="#">Living Room</a></li>
+                                                        <li><a href="#">Family Room</a></li>
+                                                        <li><a href="#">Sunroom</a></li>
+                                                    </ul>
+                                                </div>
+                                            </div>
+                                            <div class="flexcol">
+                                                <div class="row">
+                                                    <h4><a href="#">Bed & Bath</a></h4>
+                                                    <ul>
+                                                        <li><a href="#">Bathroom</a></li>
+                                                        <li><a href="#">Powder Room</a></li>
+                                                        <li><a href="#">Bedroom</a></li>
+                                                        <li><a href="#">Storage & Closet</a></li>
+                                                        <li><a href="#">Baby & Kids</a></li>
+                                                    </ul>
+                                                </div>
+                                            </div>
+                                        </div>
+                                      <li>
+                                        <a href="#">
+                                            <div class="icon-large"><i class="ri-basketball-line"></i></div>
+                                            Sports
+                                        </a>
+                                    </li>
+                                     <li>
+                                        <a href="#">
+                                            <div class="icon-large"><i class="ri-shield-star-line"></i></div>
+                                            Best Seller
                                         </a>
                                     </li>
                                 </ul>
@@ -223,10 +328,10 @@
                         <div class="right">
                             <div class="search-box">
                                 <form action="" class="search">
-                                    <span class="icon-large"><i class="ri-search-line">
-                                        <input type="search" name="" id="" placeholder="Search for products">
+                                    <span class="icon-large"><i class="ri-search-line"></i></span>
+                                        <input type="search"  placeholder="Search for products">
                                         <button type="submit">Search</button>
-                                    </i></span>
+                                    
                                 </form>
                             </div>
                         </div>
